Moved notebooks folder into project

--- a/style_fitness/notebooks/project_analysis.ipynb
+++ b/style_fitness/notebooks/project_analysis.ipynb
@@ -52,6 +52,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bfe4c7e9-682c-489c-856c-9f71ecf8df81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# auto-reload\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ff1d1d39-0330-40e0-8ca8-0d22a5c8c971",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'helpers'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# local modules\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mhelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'helpers'"
+     ]
+    }
+   ],
+   "source": [
+    "# local modules\n",
+    "from helpers import *"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c4d0cb60-d862-4291-945e-db0f7060bac3",
    "metadata": {},
@@ -61,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b13516e7-5f0d-4747-a3ae-fc2dcf1235b4",
    "metadata": {},
    "outputs": [
@@ -81,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f1c09cdc-5dcc-48e9-930c-1b385caf0d80",
    "metadata": {},
    "outputs": [
@@ -210,7 +245,7 @@
        "4               9.95            4.83    yes      F       1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d04b0e2c-e80e-4158-8fa9-1117f1298b1f",
    "metadata": {},
    "outputs": [
@@ -258,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "e55c4fc8-ec77-45c3-9c51-a8f28747f4b9",
    "metadata": {},
    "outputs": [
